[package]
name = "base38_native"
version = "0.1.0"
edition = "2021"
# add this line to run build.rs
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
